--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -3,21 +3,21 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <add name="SQL" connectionString="Data Source=i7751-app001;Initial Catalog=Taxes51;Integrated Security=True;MultipleActiveResultSets=True" />
-    <add name="DatabaseAutomation" providerName="System.Data.SqlClient" connectionString="Data Source=i7751-app127;Initial Catalog=Automation;Integrated Security=True;MultipleActiveResultSets=True"/>
-    <add name="BulkCopyXml" connectionString="provider=SQLOLEDB;data source=i7751-app127;database=Automation;integrated security=SSPI"/>
+    <add name="DatabaseAutomation" providerName="System.Data.SqlClient" connectionString="Data Source=77068-APP065;Initial Catalog=Automation;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="BulkCopyXml" connectionString="provider=SQLOLEDB;data source=77068-APP065;database=Automation;integrated security=SSPI" />
   </connectionStrings>
   <appSettings>
     <add key="Ifns" value="7751" /><!--ИФНС для выборок-->
     <add key="Help" value="Help\AutomateAis3Full.pdf" /><!--Помощь пользователю-->
-    <add key="HostNameService" value="I7751-APP127"/><!--Host моделей api-->
-    <add key="ServiceModelInventory" value="http://I7751-APP127:8181/ServiceRest/GetServiceApi"/><!--Сервис загрузки моделей сервиса отчетов-->
-    <add key="ServiceGetOrPost" value="http://I7751-APP127:8050/ServiceAutomation/LoadModelPreCheck"/><!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
-    <add key="AllTemplate" value="http://I7751-APP127:8050/ServiceAutomation/LoadAllTemplateDb"/><!--Шаблоны для загрузки моделей шаблонов для автомата-->
-    <add key="AllListModel" value="XmlFile/AutoGenerateSchemes.xml"/><!--Новая схема генерации все списки в одной модели КРУТО-->
+    <add key="HostNameService" value="77068-APP065" /><!--Host моделей api-->
+    <add key="ServiceModelInventory" value="http://77068-APP065:8181/ServiceRest/GetServiceApi" /><!--Сервис загрузки моделей сервиса отчетов-->
+    <add key="ServiceGetOrPost" value="http://77068-APP065:8050/ServiceAutomation/LoadModelPreCheck" /><!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
+    <add key="AllTemplate" value="http://77068-APP065:8050/ServiceAutomation/LoadAllTemplateDb" /><!--Шаблоны для загрузки моделей шаблонов для автомата-->
+    <add key="AllListModel" value="XmlFile/AutoGenerateSchemes.xml" /><!--Новая схема генерации все списки в одной модели КРУТО-->
     <add key="FileFid" value="XmlFile/Fid.xml" /><!--Путь к файлу ФИД по схеме FidZemlyOrImushestvo.xsd-->
     <add key="FileInn" value="XmlFile/Inn.xml" /><!--Путь к файлу ИНН по схеме SnuOneForm.xsd-->
     <add key="FileFpd" value="XmlFile/Fpd.xml" /><!--Путь к файлу ФПД по схеме FpdReg.xsd-->
@@ -28,19 +28,19 @@
     <add key="FileJurnalOk" value="XmlJurnal/InnOk.xml" /><!--Путь к файлу Журналу отрабтаных по схеме OkJurnal.xsd-->
     <add key="ReportMigration" value="XmlJurnal/ReportMigration.xml" /><!--Журнал миграции по схеме ReportMigration.xsd-->
     <add key="UserRule" value="XmlJurnal/UserRule.xml" /><!--Журнал миграции по схеме UserRule.xsd-->
-    <add key="InfoRuleTemplate" value="XmlJurnal/InfoRuleTemplate.xml"/><!--Информация по ролям и шаблонам собранным в АИС 3-->
-    <add key="InfoUserTemplateRule" value="XmlJurnal/InfoUserTemplateRule.xml"/><!--Информация по пользователям и их ролях и шаблонах собранным в АИС 3-->
+    <add key="InfoRuleTemplate" value="XmlJurnal/InfoRuleTemplate.xml" /><!--Информация по ролям и шаблонам собранным в АИС 3-->
+    <add key="InfoUserTemplateRule" value="XmlJurnal/InfoUserTemplateRule.xml" /><!--Информация по пользователям и их ролях и шаблонах собранным в АИС 3-->
     <add key="FileSpisok" value="FormXml/" /><!--Папка для формирование -->
     <add key="PathJurnal" value="XmlJurnal/" /><!--Путь к журналам-->
     <add key="PathInn" value="XmlFile/" /><!--Путь к спискам значений-->
     <add key="ExcelReportFile" value="ExcelReport/" /><!--Путь к конвертированым отчетам!!!-->
     <add key="PathPdfWork" value="PdfReport/" /><!--Путь к PDF файлам!!!-->
     <add key="ExeptionsIfns" value="" /><!--ИНН для исключения-->
-    <add key="WebSite" value="http://I7751-APP127:8095/"/>
-    <add key="PathDownloads" value="C:\Users\{0}\Downloads\"/> <!--Путь сохранения выписок из банков подстановка Логина-->
+    <add key="WebSite" value="http://77068-APP065:8095/" />
+    <add key="PathDownloads" value="C:\Users\{0}\Downloads\" /> <!--Путь сохранения выписок из банков подстановка Логина-->
     <add key="PathXsdScheme" value="XsdShemeLoad/" /><!--Путь к Xsd схемам-->
     <add key="PathDownloadTempXml" value="DownloadTempXml/" /><!--Выгрузка xml файлов-->
-    <add key="Sleepeng" value="2000"/>
+    <add key="Sleepeng" value="2000" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -56,16 +56,20 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v11.0"/>
+        <parameter value="v11.0" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
 </configuration>
