--- a/AutomatAis3Full/packages.config
+++ b/AutomatAis3Full/packages.config
@@ -13,4 +13,7 @@
   <package id="MaterialDesignThemes.MahApps" version="0.0.11" targetFramework="net452" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net452" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.WindowsRuntime" version="4.6.0" targetFramework="net452" />
+  <package id="System.Runtime.WindowsRuntime.UI.Xaml" version="4.6.0" targetFramework="net452" />
 </packages>
