--- a/LibaryAIS3Windows.Tests/app.config
+++ b/LibaryAIS3Windows.Tests/app.config
@@ -3,12 +3,12 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <add name="SQL" connectionString="Data Source=i7751-app001;Initial Catalog=Taxes51;Integrated Security=True;MultipleActiveResultSets=True" />
-    <add name="DatabaseAutomation" providerName="System.Data.SqlClient" connectionString="Data Source=i7751-app127;Initial Catalog=Automation;Integrated Security=True;MultipleActiveResultSets=True"/>
-    <add name="BulkCopyXml" connectionString="provider=SQLOLEDB;data source=i7751-app127;database=Automation;integrated security=SSPI"/>
+    <add name="DatabaseAutomation" providerName="System.Data.SqlClient" connectionString="Data Source=i7751-app127;Initial Catalog=Automation;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="BulkCopyXml" connectionString="provider=SQLOLEDB;data source=i7751-app127;database=Automation;integrated security=SSPI" />
   </connectionStrings>
   <appSettings>
     <add key="Ifns" value="7751" />
@@ -56,10 +56,10 @@
     <!--Путь к XSD схеме данных-->
     <add key="PathXsdScheme" value="D:\" />
     <!--Путь к XML данных-->
-    <add key="PathDownloadTempXml" value="D:\"/>
+    <add key="PathDownloadTempXml" value="D:\" />
     <!--ИНН для исключения-->
-    <add key="WebSite" value="http://i7751-app127:8095/"/>
-    <add key="ServiceGetOrPost" value="http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais"/>
+    <add key="WebSite" value="http://i7751-app127:8095/" />
+    <add key="ServiceGetOrPost" value="http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais" />
     <!--Адрес сервиса-->
   </appSettings>
   <runtime>
@@ -76,16 +76,20 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v11.0"/>
+        <parameter value="v11.0" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" /></startup></configuration>
