--- a/AutomatAis3Full/AutomatAis3Full.csproj
+++ b/AutomatAis3Full/AutomatAis3Full.csproj
@@ -197,7 +197,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Form\Automat\Okp6\AddRequirements\ViewAddRequirements\AddRequirementsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Form\Automat\Okp6\CheckDeclaration\ViewCheckDeclaration\CheckDeclarationView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Form\Automat\Okp6\DeclarationCalculation\ViewDeclarationCalculation\ViewDeclarationCalculation.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Form\Automat\Okp6\DeclarationComplex\ViewDeclarationComplex\DeclarationComplexView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -464,9 +476,21 @@
     <Compile Include="Form\Automat\Okp6\AddTerm\ViewAddTerm\AddTermView.xaml.cs">
       <DependentUpon>AddTermView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Form\Automat\Okp6\AddRequirements\DataContextAddRequirements\DataContextAddRequirements.cs" />
+    <Compile Include="Form\Automat\Okp6\AddRequirements\ViewAddRequirements\AddRequirementsView.xaml.cs">
+      <DependentUpon>AddRequirementsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Form\Automat\Okp6\CheckDeclaration\DataContextCheckDeclaration\DataContextCheckDeclaration.cs" />
     <Compile Include="Form\Automat\Okp6\CheckDeclaration\ViewCheckDeclaration\CheckDeclarationView.xaml.cs">
       <DependentUpon>CheckDeclarationView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Automat\Okp6\DeclarationCalculation\DataContextDeclarationCalculation\DataContextDeclarationCalculation.cs" />
+    <Compile Include="Form\Automat\Okp6\DeclarationCalculation\ViewDeclarationCalculation\ViewDeclarationCalculation.xaml.cs">
+      <DependentUpon>ViewDeclarationCalculation.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Automat\Okp6\DeclarationComplex\DataContextDeclarationComplex\DataContextDeclarationComplex.cs" />
+    <Compile Include="Form\Automat\Okp6\DeclarationComplex\ViewDeclarationComplex\DeclarationComplexView.xaml.cs">
+      <DependentUpon>DeclarationComplexView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Form\Automat\Okp6\JournalDoc\DataContextJournalDoc\DataContextJourrnalDoc.cs" />
     <Compile Include="Form\Automat\Okp6\JournalDoc\ViewJournalDoc\JourrnalDocView.xaml.cs">
@@ -722,7 +746,11 @@
       <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('C:\Nuget\AutoItX.Dotnet.3.3.14.5\build\AutoItX.Dotnet.targets')" Text="$([System.String]::Format('$(ErrorText)', 'C:\Nuget\AutoItX.Dotnet.3.3.14.5\build\AutoItX.Dotnet.targets'))" />
+    <Error Condition="!Exists('..\packages\System.Runtime.WindowsRuntime.4.6.0\build\net451\System.Runtime.WindowsRuntime.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\System.Runtime.WindowsRuntime.4.6.0\build\net451\System.Runtime.WindowsRuntime.targets'))" />
+    <Error Condition="!Exists('..\packages\System.Runtime.WindowsRuntime.UI.Xaml.4.6.0\build\net45\System.Runtime.WindowsRuntime.UI.Xaml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\System.Runtime.WindowsRuntime.UI.Xaml.4.6.0\build\net45\System.Runtime.WindowsRuntime.UI.Xaml.targets'))" />
   </Target>
+  <Import Project="..\packages\System.Runtime.WindowsRuntime.4.6.0\build\net451\System.Runtime.WindowsRuntime.targets" Condition="Exists('..\packages\System.Runtime.WindowsRuntime.4.6.0\build\net451\System.Runtime.WindowsRuntime.targets')" />
+  <Import Project="..\packages\System.Runtime.WindowsRuntime.UI.Xaml.4.6.0\build\net45\System.Runtime.WindowsRuntime.UI.Xaml.targets" Condition="Exists('..\packages\System.Runtime.WindowsRuntime.UI.Xaml.4.6.0\build\net45\System.Runtime.WindowsRuntime.UI.Xaml.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
