--- a/LibaryAIS3Windows.Tests/packages.config
+++ b/LibaryAIS3Windows.Tests/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoItX.Dotnet" version="3.3.14.5" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.WindowsRuntime" version="4.6.0" targetFramework="net472" />
+  <package id="System.Runtime.WindowsRuntime.UI.Xaml" version="4.6.0" targetFramework="net472" />
   <package id="UIAComWrapper" version="1.1.0.14" targetFramework="net452" />
+  <package id="XPlat.ApplicationModel.DataTransfer" version="1.8.1" targetFramework="net472" />
 </packages>
