--- a/ServiceAutomation/Web.config
+++ b/ServiceAutomation/Web.config
@@ -6,7 +6,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DatabaseAutomation" providerName="System.Data.SqlClient" connectionString="Data Source=i7751-app127;Initial Catalog=Automation;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="DatabaseAutomation" providerName="System.Data.SqlClient" connectionString="Data Source=77068-app065;Initial Catalog=Automation;Integrated Security=True;MultipleActiveResultSets=True" />
   </connectionStrings>
  
   <appSettings>
